--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,38 @@
     </header>
     <hr>
     <main>
-        <!-- Our main Content -->
+        <section id="form">
+        <h2>Our Contact Form</h2>
+
+        <form action="https://httpbin.org/get:" method="get">
+            <fieldset>
+                <legend>Send Us A Message</legend>
+                <p>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="your name" requited>
+                </p>
+                <p>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="your email" requited>
+                </p>
+                <p>
+                    <label for="message">Your Message</label>
+                    <br>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="type your messaage here"></textarea>
+                </p>
+            </fieldset>
+            <button type="submit">Send</button>
+            <button type="reset">Reset</button>
+        </form>
+    </section>
+    <section id="location">
+        <h2>Our Location</h2>
+        <address>
+            555 Taco Temptation Lane, Suite T <br>
+            Kansas City, MO 55555-55555 <br><br>
+            Phone: <a href="tel:5555555555">555-555-5555</a>
+        </address>
+    </section>
     </main>
     <hr>
     <footer>
